# egspload

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: egsplib.c  egsplib.h  egsploader.c
test/: egspload.h  egsptest.c  egsptest.egsp
